--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,7 @@ textarea{
 }
 
 .hour {
+  padding-top: 10px;
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
@@ -58,6 +59,7 @@ textarea{
 }
 
 .saveBtn {
+  border: none;
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
