--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,7 @@ textarea{
 
 .hour {
   padding-top: 10px;
+  padding-bottom: 10px;
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
@@ -45,17 +46,17 @@ textarea{
 
 .past {
   background-color: #d3d3d3;
-  color: white;
+  color: black;
 }
 
 .present {
   background-color: #ff6961;
-  color: white;
+  color: black;
 }
 
 .future {
   background-color: #77dd77;
-  color: white;
+  color: black;
 }
 
 .saveBtn {
